--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                     <h3 class="mb-0">Peer Teacher</h3>
                     <div class="subheading mb-3">Texas A&M University</div>
