Updated site look

--- a/index.html
+++ b/index.html
@@ -1,253 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <meta content="" name="description">
-    <meta content="" name="author">
+	<!-- Basic -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Ryan Hall</title>
+	<meta name="description" content="">
+	<meta name="keywords" content="">
 
-    <title>Ryan Hall</title>
+	<!-- Mobile Specific Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Load Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet'>
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/glitche-basic.css" />
+	<link rel="stylesheet" href="css/glitche-layout.css" />
+	<link rel="stylesheet" href="css/ionicons.css" />
+	<link rel="stylesheet" href="css/magnific-popup.css" />
+	<link rel="stylesheet" href="css/animate.css" />
 
-    <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
-
+	<!--[if lt IE 9]>
+	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 </head>
 
-<body id="page-top">
+<body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Ryan Hall</span>
-        <span class="d-none d-lg-block">
-        <img alt="" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png">
-      </span>
-    </a>
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-            class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+	<!-- Preloader -->
+	<div class="preloader">
+		<div class="centrize full-width">
+			<div class="vertical-center">
+				<div class="pre-inner">
+					<div class="load typing-load"><p>loading...</p></div>
+					<span class="typed-load"></span>
+				</div>
+			</div>
+		</div>
+	</div>
 
-<div class="container-fluid p-0">
+	<!-- Container -->
+	<div class="container">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
-        <div class="w-100">
-            <h1 class="mb-0">Ryan
-                <span class="text-primary">Hall</span>
-            </h1>
-            <div class="subheading mb-5">3858 Harvest Lane · Frisco, TX 75034 · (214) 385-1317 ·
-                <a href="mailto:ryan.hall.tx@gmail.com">ryan.hall.tx@gmail.com</a>
-            </div>
-            <p class="lead mb-5">I am an undergraduate pursuing studies in Computer Science and Cybersecurity. I am
-                currently defending <b>Texas A&M University</b> as a <b>Student Security Analyst.</b></p>
-            <div class="social-icons">
-                <a href="https://linkedin.com/in/ryan-hall-tx">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://github.com/ryancorridor">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-        </div>
-    </section>
+		<!-- Header -->
+		<header>
+			<div class="head-top">
+				<a href="#" class="menu-btn"><span></span></a>
+				<div class="top-menu">
+					<ul>
+						<li><a href="resume.html" class="lnk">Resume</a></li>
+						<li><a href="portfolio.html" class="lnk">Portfolio</a></li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
+		</header>
 
-    <hr class="m-0">
+		<!-- Wrapper -->
+		<div class="wrapper">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
-        <div class="w-100">
-            <h2 class="mb-5">Experience</h2>
+			<!-- Started -->
+			<div class="section started">
+				<div class="centrize full-width">
+					<div class="vertical-center">
+						<div class="started-content">
+							<div class="h-title glitch-effect" data-text="I'm Ryan Hall">I'm <span>Ryan Hall</span></div>
+							<div class="h-subtitle typing-subtitle">
+								<p>Student Security Analyst.</p>
+								<p>Studying at Texas A&M.</p>
+								<p>Based in Dallas.</p>
+							</div>
+							<span class="typed-subtitle"></span>
+						</div>
+					</div>
+				</div>
+			</div>
 
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content">
-                    <h3 class="mb-0">Student Security Analyst</h3>
-                    <div class="subheading mb-3">Texas A&M University</div>
-                    <p>Monitor the campus network for potential compromise and breaches in policy. Respond to threats on
-                        and off campus and collaborate with departments to mitigate risk. Develop efficient scripts to
-                        automate routine tasks and to gather incident information.</p>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">January 2019 - Present</span>
-                </div>
-            </div>
+		</div>
 
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content">
-                    <h3 class="mb-0">Peer Teacher</h3>
-                    <div class="subheading mb-3">Texas A&M University</div>
-                    <p>Description Pending</p>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2019 - December 2019</span>
-                </div>
-            </div>
+		<!-- Footer -->
+		<footer>
+			<div class="soc">
+				<a target="_blank" href="https://twitter.com/ryancorridor"><span class="ion ion-social-twitter"></span></a>
+				<a target="_blank" href="https://github.com/ryancorridor"><span class="ion ion-social-github"></span></a>
+			</div>
+			<div class="copy">© 2019 Glitche. All rights reserved.</div>
+			<div class="clr"></div>
+		</footer>
 
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content">
-                    <h3 class="mb-0">Software Engineer Intern</h3>
-                    <div class="subheading mb-3">Zix</div>
-                    <p>Description Pending</p>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">May 2019 - August 2019</span>
-                </div>
-            </div>
+		<!-- Lines -->
+		<div class="line top"></div>
+		<div class="line bottom"></div>
+		<div class="line left"></div>
+		<div class="line right"></div>
 
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content">
-                    <h3 class="mb-0">Quality Assurance Intern</h3>
-                    <div class="subheading mb-3">Zix</div>
-                    <p>Coordinate with multiple developer teams to finalize designs and confirm requirements were being
-                        met. Built and tested in virtual environments. Understood what proper testing looked like for
-                        different types of products such as web and mobile apps.</p>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">June 2018 - August 2018</span>
-                </div>
-            </div>
+	</div>
 
-        </div>
+	<!-- jQuery Scripts -->
+    <script src="js/jquery.min.js"></script>
+	<script src="js/jquery.validate.js"></script>
+	<script src="js/typed.js"></script>
+	<script src="js/magnific-popup.js"></script>
+	<script src="js/masonry.pkgd.js"></script>
+	<script src="js/imagesloaded.pkgd.js"></script>
+	<script src="js/masonry-filter.js"></script>
 
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-        <div class="w-100">
-            <h2 class="mb-5">Education</h2>
-
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content">
-                    <h3 class="mb-0">Texas A&M University</h3>
-                    <div class="subheading mb-3">Bachelor of Science</div>
-                    <div>Computer Science</div>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2018 - May 2022</span>
-                </div>
-            </div>
-
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-                <div class="resume-content">
-                    <h3 class="mb-0">Liberty High School</h3>
-                    <div class="subheading mb-3"></div>
-                    <p>Cisco Internetworking I, II, III, IV</p>
-                    <p>Computer Science I, AP, Advanced</p>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2014 - May 2018</span>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-        <div class="w-100">
-            <h2 class="mb-5">Skills</h2>
-
-            <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-            <ul class="list-inline dev-icons">
-                <li class="list-inline-item">
-                    <i class="fab fa-network-wired"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="fab fa-java"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="fab fa-python"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="fab fa-html5"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="fab fa-node-js"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="fab fa-npm"></i>
-                </li>
-            </ul>
-
-            <div class="subheading mb-3">Certifications</div>
-            <ul class="fa-ul mb-0">
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    MTA: Introduction to Programming Using Java
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    MTA: Mobility and Device Fundamentals
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    MTA: Security Fundamentals
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    MTA: Windows Operating System Fundamentals
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-        <div class="w-100">
-            <h2 class="mb-5">Interests</h2>
-            <p>Apart from being a university student, I enjoy most of my time being outdoors. In the warmer months, I
-                enjoy camping and stargazing. If it ever gets too cold out in Texas, I always have offroading, in my
-                Jeep, to rely on to keep me busy.</p>
-            <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                shows, I enjoy indulging in board games with friends, and I spend a large amount of my free time
-                exploring the latest technology advancements in the Cybersecurity world.</p>
-        </div>
-    </section>
-
-    <hr class="m-0">
-
-</div>
-
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- Plugin JavaScript -->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-<!-- Custom scripts for this template -->
-<script src="js/resume.min.js"></script>
+	<!-- Main Scripts -->
+	<script src="js/glitche-scripts.js"></script>
 
 </body>
-
 </html>
