Fixed name error

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<div class="h-title glitch-effect" data-text="I'm Ryan Hall">I'm <span>Ryan Hall</span></div>
 							<div class="h-subtitle typing-subtitle">
 								<p>Student Security Analyst.</p>
-								<p>Studying at Texas A&M.</p>
+								<p>Studying at Texas A&M University.</p>
 								<p>Based in Dallas.</p>
 							</div>
 							<span class="typed-subtitle"></span>
