Removed project: MemeBot, Added project: Smithers

--- a/portfolio.html
+++ b/portfolio.html
@@ -195,7 +195,7 @@
 						<div class="box-item f-personal">
 							<div class="image">
 								<a href="#popup-4" class="has-popup">
-									<img src="images/works/memebot.jpg" alt="" />
+									<img src="images/works/smithers.jpg" alt="" />
 									<span class="info">
 										<span class="centrize full-width">
 											<span class="vertical-center">
@@ -207,20 +207,20 @@
 							</div>
 							<div class="desc">
 								<div class="category">Personal</div>
-								<a href="#popup-4" class="name has-popup">MemeBot</a>
+								<a href="#popup-4" class="name has-popup">Smithers</a>
 							</div>
 							<div id="popup-4" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image">
-										<img src="images/works/memebot.jpg" alt="">
+										<img src="images/works/smithers.jpg" alt="">
 									</div>
 									<div class="desc">
 										<div class="category">Personal</div>
-										<h4>MemeBot</h4>
+										<h4>Smithers</h4>
 										<p>
-											A Discord bot coded in Node.js using the Discord.js Library for audio upload and playback.
+											A Discord bot coded in Node.js using the Discord.js library for audio upload and playback. <br><br><i>Awarded first place in the Aggie Coding Club Discord Bot Competition, sponsored by Capsher Technology.</i>
 										</p>
-										<a href="https://github.com/ryancorridor/MemeBot" target="_blank" class="btn" data-text="View Project">View Project</a>
+										<a href="https://github.com/ryancorridor/acc-capsher-contest" target="_blank" class="btn" data-text="View Project">View Project</a>
 									</div>
 								</div>
 							</div>
