--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="started-content">
 							<div class="h-title glitch-effect" data-text="I'm Ryan Hall">I'm <span>Ryan Hall</span></div>
 							<div class="h-subtitle typing-subtitle">
-								<p>Student Security Analyst.</p>
+								<p>Threat Intelligence Intern.</p>
 								<p>Studying at Texas A&M University.</p>
 								<p>Based in Dallas.</p>
 							</div>
@@ -86,7 +86,6 @@
 				<a target="_blank" href="https://twitter.com/ryancorridor"><span class="ion ion-social-twitter"></span></a>
 				<a target="_blank" href="https://github.com/ryancorridor"><span class="ion ion-social-github"></span></a>
 			</div>
-			<div class="copy">© 2019 Glitche. All rights reserved.</div>
 			<div class="clr"></div>
 		</footer>
 
