--- a/resume.html
+++ b/resume.html
@@ -88,19 +88,19 @@
 					</div>
 					<div class="desc">
 						<p>
-							Howdy! I'm a Computer Science major and Cybersecurity minor at Texas A&M University. I am a proud member of the
-							<a href="https://texashoneybadgers.com" target="_blank"><u>Texas Honey Badgers</u></a> and am involved in many student organizations on campus.
+							Howdy! I'm a Computing major with a concentration in Cybersecurity and Cybersecurity minor at Texas A&M University. I am a proud member of the
+							<a href="https://texashoneybadgers.com" target="_blank"><u>Texas Honey Badgers</u></a> and I am involved in many student organizations on campus.
 							I love to code and learn anything and everything to do with security in the digital age.
 
 						</p>
 						<div class="info-list">
 							<ul>
 								<li><strong>Name:</strong> Ryan Hall</li>
-								<li><strong>Age:</strong> 19 Years</li>
-								<li><strong>Job:</strong> Student Security Analyst</li>
+								<li><strong>Age:</strong> 20 Years</li>
+								<li><strong>Job:</strong> Threat Intelligence Intern</li>
 								<li><strong>Citizenship:</strong> United States</li>
 								<li><strong>Residence: </strong> Dallas</li>
-								<li><strong>E-mail:</strong> contact@ryancorridor.dev</li>
+								<li><strong>E-mail:</strong> contact@ryanhall.net</li>
 							</ul>
 						</div>
 						<div class="bts"><a target="_blank" href="resume.pdf" class="btn fill" data-text="Download Resume">Download Resume</a></div>
@@ -119,22 +119,29 @@
 							</div>
 							<div class="resume-items">
 								<div class="resume-item active">
-									<div class="date">2019 - Present</div>
+									<div class="date">May 2020 - Present</div>
+									<div class="name">Threat Intelligence Intern - State Farm</div>
+									<p>
+										Develop playbooks to automate threat hunting processes. Research current threats to organization and evaluate course of action based off of risk and vulnerability.
+									</p>
+								</div>
+								<div class="resume-item">
+									<div class="date">January 2019 - August 2020</div>
 									<div class="name">Student Security Analyst - Texas A&M University</div>
 									<p>
 										Monitor the campus network for potential compromise and breaches in policy. Respond to threats on and off campus to mitigate risks. Develop efficient scripts to automate routine tasks and to gather incident information.
 									</p>
 								</div>
 								<div class="resume-item">
-									<div class="date">2019 - 2019</div>
-									<div class="name">Software Engineering Intern - Zix Corporation</div>
+									<div class="date">May 2019 - August 2019</div>
+									<div class="name">Software Engineering Intern - Zix</div>
 									<p>
 										Defined requirements, implemented solutions, and managed life-cycle of user stories. Involved in development of keyword-drive automated tests using Selenium Webdriver. Worked collaboratively with senior members on developing improvements to existing web applications.
 									</p>
 								</div>
 								<div class="resume-item">
-									<div class="date">2018-2018</div>
-									<div class="name">Quality Assurance Intern - Zix Corporation</div>
+									<div class="date">June 2018 - August 2018</div>
+									<div class="name">Quality Assurance Intern - Zix</div>
 									<p>
 										Executed testing cycles for new mobile operating system updates. Revised and corrected tests to create more documentation of existing processes. Coordinated with multiple departments to finalize designs and ensured requirements were being met.
 									</p>
@@ -150,7 +157,7 @@
 									<div class="date">2018-2022</div>
 									<div class="name">Texas A&M University</div>
 									<p>
-											Studying <b>Computer Science</b>, with a focus in <i>Cybersecurity</i>.
+											Studying <b>Computing</b>, with a focus in <i>Cybersecurity</i>.
 											Actively participating in <b>Aggie Coding Club</b>, <b>Texas A&M
 											Cybersecurity Club</b>, and <b>hackathons</b>.
 									</p>
@@ -162,7 +169,7 @@
 			</div>
 
 			<!-- Skills -->
-			<div class="section skills">
+			<!-- <div class="section skills">
 				<div class="content">
 					<div class="title">
 						<div class="title_inner">My Skills</div>
@@ -269,7 +276,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Footer -->
 		<footer>
@@ -277,7 +284,6 @@
 				<a target="_blank" href="https://twitter.com/ryancorridor"><span class="ion ion-social-twitter"></span></a>
 				<a target="_blank" href="https://github.com/ryancorridor"><span class="ion ion-social-github"></span></a>
 			</div>
-			<div class="copy">© 2019 Glitche. All rights reserved.</div>
 			<div class="clr"></div>
 		</footer>
 
