--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						<div class="started-content">
 							<div class="h-title glitch-effect" data-text="I'm Ryan Hall">I'm <span>Ryan Hall</span></div>
 							<div class="h-subtitle typing-subtitle">
-								<p>Threat Intelligence Intern.</p>
-								<p>Studying at Texas A&M University.</p>
+								<p>Security Engineering Intern at Google.</p>
+								<p>Studying Computer Science at Texas A&M University.</p>
 								<p>Based in Dallas.</p>
 							</div>
 							<span class="typed-subtitle"></span>
