--- a/resume.html
+++ b/resume.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="desc">
 						<p>
-							Howdy! I'm a Computing major with a concentration in Cybersecurity and Cybersecurity minor at Texas A&M University. I am a proud member of the
+							Howdy! I'm a Computer Science major with a emphasis in Cybersecurity and Cybersecurity minor at Texas A&M University. I am a proud member of the
 							<a href="https://texashoneybadgers.com" target="_blank"><u>Texas Honey Badgers</u></a> and I am involved in many student organizations on campus.
 							I love to code and learn anything and everything to do with security in the digital age.
 
@@ -97,7 +97,7 @@
 							<ul>
 								<li><strong>Name:</strong> Ryan Hall</li>
 								<li><strong>Age:</strong> 20 Years</li>
-								<li><strong>Job:</strong> Threat Intelligence Intern</li>
+								<li><strong>Job:</strong> Security Engineering Intern</li>
 								<li><strong>Citizenship:</strong> United States</li>
 								<li><strong>Residence: </strong> Dallas</li>
 								<li><strong>E-mail:</strong> contact@ryanhall.net</li>
@@ -118,8 +118,15 @@
 								<div class="title_inner">Experience</div>
 							</div>
 							<div class="resume-items">
-								<div class="resume-item active">
-									<div class="date">May 2020 - Present</div>
+                <div class="resume-item active">
+									<div class="date">June 2021 - Current</div>
+									<div class="name">Security Engineering Intern - Google</div>
+									<p>
+
+									</p>
+								</div>
+								<div class="resume-item">
+									<div class="date">May 2020 - May 2021</div>
 									<div class="name">Threat Intelligence Intern - State Farm</div>
 									<p>
 										Develop playbooks to automate threat hunting processes. Research current threats to organization and evaluate course of action based off of risk and vulnerability.
@@ -157,7 +164,7 @@
 									<div class="date">2018-2022</div>
 									<div class="name">Texas A&M University</div>
 									<p>
-											Studying <b>Computing</b>, with a focus in <i>Cybersecurity</i>.
+											Studying <b>Computer Science</b>, with a emphasis in <i>Cybersecurity</i>.
 											Actively participating in <b>Aggie Coding Club</b>, <b>Texas A&M
 											Cybersecurity Club</b>, and <b>hackathons</b>.
 									</p>
